@@ -20,8 +20,8 @@ import java.io.InputStream;
 import java.io.OutputStream;
 import java.io.UnsupportedEncodingException;
 import java.lang.reflect.Method;
-import java.net.MalformedURLException;
-import java.net.URL;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
@@ -141,28 +141,28 @@ abstract class Util {
         return timeProvider.getTime();
     }
 
-    static File fileFromURL(URL url) {
-        if ("file".equalsIgnoreCase(url.getProtocol())) {
-            String path = url.getPath();
+    static File fileFromURI(URI uri) {
+        if ("file".equalsIgnoreCase(uri.getScheme())) {
+            String path = uri.getSchemeSpecificPart();
             try {
                 path = decode(path, "utf-8");
                 return new File(path);
             } catch (UnsupportedEncodingException e) {
                 return unreachableButCompilerNeedsThis(/* utf-8 is supported in jre libraries */);
             }
-        } else if ("jar".equalsIgnoreCase(url.getProtocol())) {
-            String path = url.getPath();
+        } else if ("jar".equalsIgnoreCase(uri.getScheme())) {
+            String path = uri.getSchemeSpecificPart();
             try {
-                return fileFromURL(path.substring(0, path.indexOf('!')));
-            } catch (MalformedURLException e) {
+                return fileFromURI(path.substring(0, path.indexOf('!')));
+            } catch (URISyntaxException e) {
                 return ignore(/* non critical */);
             }
         }
         return null;
     }
 
-    static File fileFromURL(String urlSpec) throws MalformedURLException {
-        return fileFromURL(new URL(urlSpec));
+    static File fileFromURI(String uriSpec) throws URISyntaxException {
+        return fileFromURI(new URI(uriSpec));
     }
 
     static boolean eq(Object o1, Object o2) {
